课表位置与页面保持相对位置，页面位置变动，课表位置也会变动，用于下拉刷新

--- a/app.json
+++ b/app.json
@@ -1,11 +1,13 @@
 {
   "pages": [
-    
-    "pages/me/me",
-    "pages/me/account/account",
     "pages/classes/classes",
+    "pages/me/me",
+    "pages/classes/week/week",
+    "pages/me/account/account",
+    
     "pages/oa/oa",
     "pages/oa/detail/detail"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
