--- a/app.json
+++ b/app.json
@@ -2,13 +2,14 @@
   "pages": [
     
     "pages/classes/classes",
+    "pages/classes/classmate/classmate",
+    "pages/me/about_us/about_us",
     "pages/classes/share/share",
     "pages/classes/detail/detail",
     "pages/classes/setting/setting",
     "pages/me/me",
-    "pages/me/account/account"
-
-    
+    "pages/me/account/account",
+    "pages/me/update_log/update_log"
   ],
   "window": {
     "backgroundTextStyle": "light",
